# agent-master

./: .gitignore  README.md  pyproject.toml  witness.py
dev/: config.toml
doc/: 00-vision.md  01-data-model.md  02-adapter.md  03-realtime.md  04-topology.md  05-hitl.md  06-architecture.md  07-ui.md  08-roadmap.md  DECISIONS_NEEDED.md  README.md
doc/archive/: 02-data-model-typescript-draft.md  README.md  workflow-visualization-design.md
doc/archive/early-drafts/: README.md  governance-approval-system.ts  workflow-dsl-augmentation.yaml  workflow-dsl-example-deploy.yaml  workflow-dsl-example-review.yaml  workflow-dsl.yaml  workflow-instantiation-discovery.ts  workflow-integration.ts  workflow-runtime-augmentation.ts  workflow-templates-examples.yaml  workflow-templates-triggers.ts  workflow-templates.yaml  workflow-types.ts  workflow-visualization.ts
mvp/: 00-vision-and-positioning.md  01-data-model.md  02-source-adapters.md  03-architecture.md  04-frontend-stack.md  05-known-gaps-and-next-steps.md  06-conversation-log.md  README.md
scripts/: smoke_mock_data.py  smoke_real_daemon.py
src/agent_master/: __init__.py  cli.py  config.py  daemon.py  logging_setup.py
src/agent_master/adapters/: __init__.py  base.py  registry.py
tests/: conftest.py  test_adapters.py  test_api_endpoints.py  test_broker.py  test_config.py  test_health.py  test_migrations.py  test_models.py  test_pipeline.py  test_repos.py  test_seed.py  test_sse_e2e.py  test_watch.py
ui/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx
(+60 files in other folders)
