[project]
name = "agent-master"
version = "0.1.0"
description = "Local-first observability dashboard for coding agents on your machine."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "horus" }]
keywords = ["agent", "observability", "local-first", "dashboard"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "watchfiles>=0.24",
    "sse-starlette>=2.0",
    "pydantic>=2.9",
    "tomli-w>=1.0",
    "structlog>=24.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
agent-master = "agent_master.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_master"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "packages/adapters"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]
